<resources>
    <string name="app_name">Calculatrice</string>
    <string name="divide_zero">Cannot divide by zero</string>
    <string name="unknown_error">This is an unknown error</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="clear">C</string>
    <string name="erase">ERASE</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">X</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
</resources>
