<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitePrincipale">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="1" >
            <TextView
                android:id="@+id/calc"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="fill_horizontal"
                android:layout_rowWeight="1"
                android:gravity="start"
                android:textColor="@color/lightButton"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="15dp" />
            <TextView
                android:id="@+id/show_result"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="fill_horizontal"
                android:layout_rowWeight="1"
                android:gravity="end"
                android:textColor="@android:color/white"
                android:textSize="35sp"
                android:layout_marginEnd="20dp"/>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:columnCount="4"
            android:rowCount="5" >

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btnClean"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/clear"
                android:textColor="@color/clear"
                android:background="@color/lightButton" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btnDivide"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/divide"
                android:textColor="@color/operations"
                android:textStyle="bold"
                android:background="@color/darkButton" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btnMultiply"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/multiply"
                android:textColor="@color/operations"
                android:textStyle="bold"
                android:background="@color/darkButton" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btnErase"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/erase"
                android:textColor="@color/clear"
                android:background="@color/lightButton" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btn7"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/seven"
                android:background="@android:color/darker_gray" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btn8"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/eight"
                android:background="@android:color/darker_gray" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btn9"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/nine"
                android:background="@android:color/darker_gray" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btnMinus"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/minus"
                android:textColor="@color/operations"
                android:textStyle="bold"
                android:background="@color/darkButton" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btn4"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:gravity="center"
                android:text="@string/four"
                android:background="@android:color/darker_gray" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btn5"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:gravity="center"
                android:text="@string/five"
                android:background="@android:color/darker_gray" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btn6"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:gravity="center"
                android:text="@string/six"
                android:background="@android:color/darker_gray" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btnPlus"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="@color/operations"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@color/darkButton" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btn1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:gravity="center"
                android:text="@string/one"
                android:background="@android:color/darker_gray" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btn2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/two"
                android:background="@android:color/darker_gray" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btn3"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/three"
                android:background="@android:color/darker_gray" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btnEqual"
                android:layout_columnWeight="1"
                android:layout_rowSpan="2"
                android:layout_rowWeight="2"
                android:text="@string/equal"
                android:textColor="@color/operations"
                android:textStyle="bold"
                android:textSize="30sp"
                android:background="@color/darkButton" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btn0"
                android:layout_columnSpan="2"
                android:layout_columnWeight="2"
                android:layout_rowWeight="1"
                android:text="@string/zero"
                android:background="@android:color/darker_gray" />

            <Button
                android:theme="@style/Buttons"
                android:id="@+id/btnDot"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:text="@string/dot"
                android:textStyle="bold"
                android:background="@android:color/darker_gray" />
        </GridLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>